Fix alignment of the nav bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,15 +34,12 @@ hr {
 }
 
 nav {
+	text-align: center;
 	width: 75%;
 	max-width: 825px;
-	display: inline-block;
+	display: block;
 	background: lightgrey;
 	margin: 20px auto;
-}
-
-nav ul {
-	text-align: center;
 }
 
 nav li {
@@ -167,7 +164,7 @@ footer {
 	height: 50px;
 	text-align: center;
 	line-height: 50px;
-	background-color: rgba(0, 0, 0, .5);
+	background-color: rgba(0, 0, 0, .25);
 	position: fixed;
 	right: -4px;
 	top: 25%;
